hphp/test/zend/good/ext/standard/tests/file/filegroup_variation1.php.skipif
<?php
<<__EntryPoint>> function main() {
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip Do not run on Windows');
}
}
