hphp/test/zend/bad/ext/standard/tests/file/copy_variation12.php.skipif
<?php
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip Do not run on Windows");
?>